--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,18 @@
-version: '3.1'
+version: '3.2'
 
 services:
 
-  mongo:
-    image: mongo
+  mongodb:
+    image: mongo:4.0.4
     ports:
       - 27017:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: mongoadmin
-      MONGO_INITDB_ROOT_PASSWORD: secret mongo
+    container_name: mongodb
 
   app:
-    image: myfirst_docker_image
+    image: firstapp
     ports:
       - 8080:8080
+    depends_on: 
+      - mongodb
+    container_name: app_on_docker
 
-  mongo-express:
-    image: mongo-express
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
